unpackaged/main/default/objects/Opportunity/fields/Account_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit__c</fullName>
    <description>Used in facilitating the assignment of Default Values</description>
    <formula>TEXT(Account.Account_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Unit</label>
    <type>Text</type>
</CustomField>