unpackaged/main/default/objects/Opportunity/fields/Account_Plan_Document__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Document__c</fullName>
    <inlineHelpText>Provide the URL to the google drive folder containing Account Plan document (Executive Summary, influence Map  and Solution Map. If not applicable, please type &#39;N/A&#39;</inlineHelpText>
    <label>Account Plan Document</label>
    <type>Url</type>
</CustomField>