unpackaged/main/default/objects/Opportunity/fields/Account_Stage_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_at_Creation__c</fullName>
    <label>Account Stage at Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Stages</valueSetName>
    </valueSet>
</CustomField>