unpackaged/main/default/objects/Opportunity/fields/Acting_as_Agency__c.field-meta.xml
<CustomField>
    <fullName>Acting_as_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acting as Agency</label>
    <type>Checkbox</type>
</CustomField>