unpackaged/main/default/objects/Opportunity/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__MasterContract__r.ActivatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>