unpackaged/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <formula>IF(Has_Primary_Quote__c, IF(SBQQ__PrimaryQuote__r.ACV__c &lt;= 0, IF(NOT(ISBLANK(Manual_ACV__c)) &amp;&amp; Manual_ACV__c &gt; 0, Manual_ACV__c, Total_ACV_Admin__c), SBQQ__PrimaryQuote__r.ACV__c), If(and(OR(ISPICKVAL(StageName, &quot;closed won&quot;),ISPICKVAL(StageName, &quot;closed lost&quot;)),CloseDate &lt; DATE(2023,04,15)) ,Total_ACV_Admin__c,
IF(NOT(ISBLANK(Manual_ACV__c)) &amp;&amp; Manual_ACV__c &gt; 1, Manual_ACV__c, Total_ACV_Admin__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>