unpackaged/main/default/objects/Opportunity/fields/ACV_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>ACV_Primary_Quote__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV (Primary Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>