unpackaged/main/default/objects/Opportunity/fields/ACVH__c.field-meta.xml
<CustomField>
    <fullName>ACVH__c</fullName>
    <description>ACV for field Tracking history-Mo</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>