unpackaged/main/default/objects/Opportunity/fields/Add_On_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Type__c</fullName>
    <label>Add-On Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Uplift</fullName>
            </value>
            <value>
                <fullName>Exchange Rate Impact</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
                <isActive>false</isActive>
                <label>Upgrade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>