unpackaged/main/default/objects/Opportunity/fields/Additional_Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Relationship_Notes__c</fullName>
    <inlineHelpText>for client handoff process</inlineHelpText>
    <label>Additional Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>