unpackaged/main/default/objects/Opportunity/fields/Addressable_Business_Problems__c.field-meta.xml
<CustomField>
    <fullName>Addressable_Business_Problems__c</fullName>
    <inlineHelpText>What Business Problem(s) or Opportunities are we addressing?</inlineHelpText>
    <label>Addressable Business Problems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>