unpackaged/main/default/objects/Opportunity/fields/Amount_Due_to_BC__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_BC__c</fullName>
    <label>Amount Due to BC Under Existing Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>