unpackaged/main/default/objects/Opportunity/fields/BC_Consulting_Value__c.field-meta.xml
<CustomField>
    <fullName>BC_Consulting_Value__c</fullName>
    <label>BGS Engagement Value Y1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>