unpackaged/main/default/objects/Opportunity/fields/BGS_Deal_Forecast__c.field-meta.xml
<CustomField>
    <fullName>BGS_Deal_Forecast__c</fullName>
    <label>BGS Engagement Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Discovery</fullName>
            </value>
            <value>
                <fullName>2. ROM &amp; Proposal Creation</fullName>
            </value>
            <value>
                <fullName>3. SOW Creation &amp; Signature</fullName>
            </value>
            <value>
                <fullName>4. SOW Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>