unpackaged/main/default/objects/Opportunity/fields/BGS_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>BGS_Deal_Status__c</fullName>
    <label>BGS Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Discovery</fullName>
            </value>
            <value>
                <fullName>Next Quarter</fullName>
            </value>
            <value>
                <fullName>Proposal Creation</fullName>
            </value>
            <value>
                <fullName>SOW Creation &amp; Signature</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>1 - Discovery &amp; Analysis</fullName>
                <isActive>false</isActive>
                <label>1 - Discovery &amp; Analysis</label>
            </value>
            <value>
                <fullName>2 - Solution Design / Validation</fullName>
                <isActive>false</isActive>
                <label>2 - Solution Design / Validation</label>
            </value>
            <value>
                <fullName>3 - Building Business Case</fullName>
                <isActive>false</isActive>
                <label>3 - Building Business Case</label>
            </value>
            <value>
                <fullName>4 - Proposing and Closing</fullName>
                <isActive>false</isActive>
                <label>4 - Proposing and Closing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>