unpackaged/main/default/objects/Opportunity/fields/BGS_Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>BGS_Pursuit_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BGS Pursuit Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>