unpackaged/main/default/objects/Opportunity/fields/Brightcove_Account__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brightcove Account</label>
    <referenceTo>Brightcove_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>