unpackaged/main/default/objects/Opportunity/fields/Brightcove_Accounts_to_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Accounts_to_Terminate__c</fullName>
    <label>Brightcove Accounts to Terminate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>