unpackaged/main/default/objects/Opportunity/fields/Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Budget_Source__c</fullName>
    <label>Budget Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>