unpackaged/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Created by Sadhana Team. Deprecated field we had to replicate to migrate reports and report types</inlineHelpText>
    <label>Z - Obsolete_Business Unit</label>
    <referenceTo>et4ae5__Business_Unit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>