unpackaged/main/default/objects/Opportunity/fields/Client_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Date__c</fullName>
    <label>Client Termination Date</label>
    <type>Date</type>
</CustomField>