unpackaged/main/default/objects/Opportunity/fields/Client_Termination_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Date_Stamp__c</fullName>
    <label>Client Termination Date Stamp</label>
    <type>DateTime</type>
</CustomField>