unpackaged/main/default/objects/Opportunity/fields/Client_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Rights__c</fullName>
    <label>Client Termination Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>