unpackaged/main/default/objects/Opportunity/fields/Client_Termination_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Termination Submitted?</label>
    <type>Checkbox</type>
</CustomField>