unpackaged/main/default/objects/Opportunity/fields/Commit_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Commit_In_Out__c</fullName>
    <label>Forecast In/Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
                <default>true</default>
                <label>Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>