unpackaged/main/default/objects/Opportunity/fields/Contract_Ids_to_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Ids_to_Terminate__c</fullName>
    <label>Contract Ids to Terminate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>