unpackaged/main/default/objects/Opportunity/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <formula>Contract_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>