unpackaged/main/default/objects/Opportunity/fields/Contract_Types__c.field-meta.xml
<CustomField>
    <fullName>Contract_Types__c</fullName>
    <formula>TEXT(Contract_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Types</label>
    <type>Text</type>
</CustomField>