unpackaged/main/default/objects/Opportunity/fields/Contracts_to_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Contracts_to_Terminate__c</fullName>
    <label>Contracts to Terminate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>