unpackaged/main/default/objects/Opportunity/fields/Create_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Create_by_Role__c</fullName>
    <label>Create by Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>