unpackaged/main/default/objects/Opportunity/fields/Customer_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Model__c</fullName>
    <inlineHelpText>What is the customer&#39;s business model?</inlineHelpText>
    <label>Customer Business Model</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>