unpackaged/main/default/objects/Opportunity/fields/Customer_Buying_Steps__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buying_Steps__c</fullName>
    <inlineHelpText>What Buying Steps must the Customer go through?</inlineHelpText>
    <label>Customer Buying Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>