unpackaged/main/default/objects/Opportunity/fields/Customer_Expected_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expected_Outcomes__c</fullName>
    <description>What Outcome(s) do they want to achieve and by When?</description>
    <label>Customer Expected Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>