unpackaged/main/default/objects/Opportunity/fields/Customer_s_Folder__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Folder__c</fullName>
    <description>used to contain the Onboarding Deck for the new customer</description>
    <label>Customer&#39;s Folder</label>
    <type>Url</type>
</CustomField>