unpackaged/main/default/objects/Opportunity/fields/Customer_Success_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_KPIs__c</fullName>
    <inlineHelpText>How will the customer measure the success of their video implementation?</inlineHelpText>
    <label>Customer Success KPIs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>