unpackaged/main/default/objects/Opportunity/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <description>Populate the date we should lock their BCAccounts</description>
    <inlineHelpText>Populate the date we should lock their BCAccounts</inlineHelpText>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>