unpackaged/main/default/objects/Opportunity/fields/Deal_and_Services_Total__c.field-meta.xml
<CustomField>
    <fullName>Deal_and_Services_Total__c</fullName>
    <formula>Related_Renewal_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal and Services Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>