unpackaged/main/default/objects/Opportunity/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Discovery</fullName>
            </value>
            <value>
                <fullName>Proposal Creation</fullName>
            </value>
            <value>
                <fullName>SOW Creation &amp; Signature</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>