unpackaged/main/default/objects/Opportunity/fields/Demo_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Stage_Set_Date__c</fullName>
    <label>Demo Stage Set Date</label>
    <type>DateTime</type>
</CustomField>