unpackaged/main/default/objects/Opportunity/fields/Discovery_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Stage_Set_Date__c</fullName>
    <label>Discovery Stage Set Date</label>
    <type>DateTime</type>
</CustomField>