unpackaged/main/default/objects/Opportunity/fields/Early_Renewal_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Early_Renewal_Credit_Amount__c</fullName>
    <label>Early Renewal Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>