unpackaged/main/default/objects/Opportunity/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Populate the contract end date or agreed upon contract termination/expiration date</description>
    <inlineHelpText>Populate the contract end date or agreed upon contract termination/expiration date</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>