unpackaged/main/default/objects/Opportunity/fields/EMRR__c.field-meta.xml
<CustomField>
    <fullName>EMRR__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.EMRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>