unpackaged/main/default/objects/Opportunity/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.End_Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Name</label>
    <type>Text</type>
</CustomField>