unpackaged/main/default/objects/Opportunity/fields/Existing_MRR__c.field-meta.xml
<CustomField>
    <fullName>Existing_MRR__c</fullName>
    <label>Existing MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>