unpackaged/main/default/objects/Opportunity/fields/Field_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSR Credit Roll Up</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>