unpackaged/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <inlineHelpText>Confidence the deal will close in this quarter.</inlineHelpText>
    <label>Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>