unpackaged/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google Click ID (GCLID) is a parameter passed in the URL with ad clicks, to identify the campaign and other attributes of the click associated with the ad for ad tracking and campaign attribution.</description>
    <inlineHelpText>Google Click ID (GCLID) is a parameter passed in the URL with ad clicks, to identify the campaign and other attributes of the click associated with the ad for ad tracking and campaign attribution.</inlineHelpText>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>