unpackaged/main/default/objects/Opportunity/fields/Global_Region__c.field-meta.xml
<CustomField>
    <fullName>Global_Region__c</fullName>
    <label>Global Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>