unpackaged/main/default/objects/Opportunity/fields/Growth_Type__c.field-meta.xml
<CustomField>
    <fullName>Growth_Type__c</fullName>
    <description>Used for calculating the price uplift</description>
    <inlineHelpText>Enter in the type of renewal growth this opp represents:

1) Add-On Only (Selected when new products or entitlements are being actively sold)
2) Uplift Only (Selected when a percentage increase is being applied to previous contract)
3) Add-On &amp; Uplift</inlineHelpText>
    <label>Growth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uplift Only</fullName>
            </value>
            <value>
                <fullName>Add-on Only</fullName>
            </value>
            <value>
                <fullName>Add-On &amp; Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>