unpackaged/main/default/objects/Opportunity/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>