unpackaged/main/default/objects/Opportunity/fields/Has_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Primary_Quote__c</fullName>
    <formula>NOT(ISBLANK(SBQQ__PrimaryQuote__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Primary Quote</label>
    <type>Checkbox</type>
</CustomField>