unpackaged/main/default/objects/Opportunity/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>