unpackaged/main/default/objects/Opportunity/fields/Invoice_Email_s__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_s__c</fullName>
    <description>List emails that should receive the invoice from billing. If there is more than one separate by comma.</description>
    <label>Invoice Email(s)</label>
    <type>TextArea</type>
</CustomField>