unpackaged/main/default/objects/Opportunity/fields/Is_the_Contract_Auto_Renewing__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Contract_Auto_Renewing__c</fullName>
    <inlineHelpText>Indicate if the contract is Auto-Renewing, please mark &quot;Yes&quot; if you are closing Won the renewal as &quot;Auto-Renew&quot;</inlineHelpText>
    <label>Is the Contract Auto-Renewing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>